<resources>
    <string name="app_name">Branch Directory Map</string>
    <string name="title_activity_file">File Selection</string>
    <string name="title_activity_maps">Map</string>
    <string name="loading">Loading...</string>
    <string name="search_hint">search</string>
    <string name="btn_navi">Start Navigation</string>
    <string name="btn_view">View in Maps</string>
    <string name="btn_add">Add to Route</string>
    <string name="btn_remove">Remove from Route</string>
    <string name="btn_call">Call Branch</string>
    <string name="via">Via:</string>
    <string name="failed">Failed to retrieve route information. Try again by selecting marker.</string>
    <string name="location_warn">This app requires Precise Location permission to function properly. Without it, you will not be able to use any routing features or see traffic information.</string>
    <string name="type_warn">Error trying to read the chosen file, this app only reads files with CSV or DB extensions. Press back twice to exit the app, and then please re-run the app to try again.</string>
    <string name="db_warn">Error trying to read the embedded DB file. Please make sure the file name is correct before rebuilding the app. This app will now terminate.</string>
    <string name="file_warn">Error trying to read the embedded CSV file. Please make sure the file name is correct before rebuilding the app.</string>
    <string name="file_not_found">Error trying to read the chosen file, perhaps this app does not have permission to read the file. Press back twice to exit the app, and then please re-run the app to try again.</string>
    <string name="file_not_read">Error trying to read the chosen file, this app only reads properly formatted CSV files. Press back twice to exit the app, and then please re-run the app to try again.</string>
    <string name="file_not_loaded">Database did not finish loading before termination, please select a CSV file again.</string>
    <string name="marker_error">Not all addresses were successfully geocoded to markers. Press back twice to exit the app, and then please re-run the app to try again. If you keep seeing this error, contact your system administrator.</string>
    <string name="key_error">The API Key could not be fetched from Firebase server. Press back twice to exit the app, and then please re-run the app to try again. If you keep seeing this error, contact your system administrator.</string>
    <string name="root_error">Root or debugging detected. Your organization has prevented this app from running in these modes. This app will now terminate.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="header_all">All</string>
    <string name="warning">Warning</string>
    <string name="finished">Finished loading markers</string>
    <string name="no_results">No results found</string>
    <string name="many_results">Too many results, please select from suggestions</string>
    <string name="press_back">Please press back again to exit</string>
    <string name="exceed_intermediates">Max number of intermediate steps adjusted to meet Google\'s limits</string>
    <string name="max_intermediates">Max number of intermediate steps reached</string>
    <string name="max_intermediates_ext">Google Maps App has a limit of 9 intermediate steps including waypoints, please shorten the route</string>
    <string name="gm_not_found">Google Maps was not found on your device</string>
    <string name="location_denied">Location permission denied, this app will not work properly</string>
    <string name="route_options">Route Options</string>
    <string name="traffic">Traffic</string>
    <string name="highways">Highways</string>
    <string name="tolls">Tolls</string>
    <string name="ferries">Ferries</string>
    <string name="couldnt_avoid_one">Couldn\'t avoid %1$s</string>
    <string name="couldnt_avoid_two">Couldn\'t avoid %1$s or %2$s</string>
    <string name="couldnt_avoid_three">Couldn\'t avoid %1$s, %2$s, or %3$s</string>
    <string name="map_options">Map Options</string>
    <string name="map_type">Map Type</string>
    <string name="mono">Mono</string>
    <string name="app_theme">App Theme</string>
    <string name="alt">Alt</string>
    <string-array name="traffic_dropdown">
        <item>No Traffic</item>
        <item>Best Guess</item>
        <item>Optimistic</item>
        <item>Pessimistic</item>
    </string-array>
    <string-array name="traffic_adv_dropdown">
        <item>No Traffic</item>
        <item>Optimal Aware</item>
    </string-array>
    <string-array name="appearance_dropdown">
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>
    <string-array name="theme_dropdown_sensor">
        <item>System</item>
        <item>Day</item>
        <item>Night</item>
        <item>Ambient</item>
    </string-array>
    <string-array name="theme_dropdown">
        <item>System</item>
        <item>Day</item>
        <item>Night</item>
    </string-array>
</resources>