<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    android:clipChildren="false"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_searchview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pri_text_low_alt">

        <ImageButton
            android:id="@+id/button_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_menu"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:iconifiedByDefault="false"
            android:hint="@string/search_hint"
            app:layout_constraintStart_toEndOf="@id/button_menu"
            app:layout_constraintEnd_toStartOf="@+id/spinner_search"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Spinner
            android:id="@+id/spinner_search"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:padding="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchView"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/layout_map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/layout_searchview" >

        <fragment
            android:id="@+id/map_fragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            app:mapId="@string/map_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <View
            android:id="@+id/invisible_anchor"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:layout_marginBottom="0dp" />

        <LinearLayout
            android:id="@+id/layout_marker_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/invisible_anchor"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            android:elevation="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_marker_view"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:minHeight="0dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:text="@string/btn_view"
                app:cornerRadius="8dp"
                android:textColor="@color/white"
                app:backgroundTint="@color/transparent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_marker_add"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:minHeight="0dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:text="@string/btn_add"
                app:cornerRadius="8dp"
                android:layout_marginTop="-4dp"
                android:textColor="@color/white"
                app:backgroundTint="@color/transparent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_marker_remove"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:minHeight="0dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:text="@string/btn_remove"
                app:cornerRadius="8dp"
                android:layout_marginTop="-4dp"
                android:textColor="@color/white"
                app:backgroundTint="@color/transparent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_marker_call"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:minHeight="0dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="6dp"
                android:text="@string/btn_call"
                app:cornerRadius="8dp"
                android:layout_marginTop="-4dp"
                android:textColor="@color/white"
                app:backgroundTint="@color/transparent" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/textview_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/info_window_background"
        android:padding="16dp"
        android:text="@string/loading"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_directions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_above="@id/button_clear"
        android:layout_marginEnd="12dp"
        app:tint="@color/pri_text_high"
        app:backgroundTint="@color/pri_text_low_alt"
        android:src="@drawable/ic_directions"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="12dp"
        app:tint="@color/pri_text_high"
        app:backgroundTint="@color/pri_text_low_alt"
        android:src="@drawable/ic_close"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="12dp"
        app:tint="@color/pri_text_high"
        app:backgroundTint="@color/pri_text_low_alt"
        android:src="@drawable/ic_route"
        android:elevation="6dp"
        android:translationZ="0dp" />

    <LinearLayout
        android:id="@+id/menu_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/left_menu_rounded"
        android:elevation="24dp"
        android:translationZ="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/route_options"
            android:textColor="@color/pri_text_high"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_traffic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/traffic"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="1"
                android:textColor="@color/pri_text_high"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_traffic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_highways"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/highways"
                android:textColor="@color/pri_text_high"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="2dp"
                app:switchPadding="2dp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_tolls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tolls"
                android:textColor="@color/pri_text_high"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="2dp"
                app:switchPadding="2dp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_ferries"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ferries"
                android:textColor="@color/pri_text_high"
                android:textSize="16sp"
                android:textStyle="bold"
                app:switchPadding="2dp" />

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_layers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        app:tint="@color/pri_text_high"
        app:backgroundTint="@color/pri_text_low_alt"
        android:src="@drawable/ic_layer"
        android:elevation="6dp"
        android:translationZ="0dp" />

    <LinearLayout
        android:id="@+id/menu_layers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/right_menu_rounded"
        android:elevation="24dp"
        android:translationZ="2dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/map_options"
            android:textColor="@color/pri_text_high"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_appearance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/map_type"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="1"
                android:textColor="@color/pri_text_high"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_appearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/app_theme"
                android:layout_gravity="center_vertical|left"
                android:layout_weight="1"
                android:textColor="@color/pri_text_high"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_traffic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic"
                android:textColor="@color/pri_text_high"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="2dp"
                app:switchPadding="2dp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_alt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alt"
                android:textColor="@color/pri_text_high"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginEnd="2dp"
                app:switchPadding="2dp" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/switch_mono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mono"
                android:textColor="@color/pri_text_high"
                android:textSize="16sp"
                android:textStyle="bold"
                app:switchPadding="2dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>